Lab/test_syntax.output
Nonterminals useless in grammar

    Epsilon
    FunDec
    VarList
    ParamDec
    CompSt
    StmtList
    Stmt
    Program
    ExtDefList
    ExtDef
    ExtDecList


Terminals unused in grammar

    RETURN
    IF
    ELSE
    WHILE
    TYPE
    ERROR


Rules useless in grammar

   36 Epsilon: %empty

   37 FunDec: ID LP VarList RP
   38       | ID LP RP

   39 VarList: ParamDec COMMA VarList
   40        | ParamDec

   41 ParamDec: Specifier VarDec

   42 CompSt: LC DefList StmtList RC

   43 StmtList: Stmt StmtList
   44         | Epsilon

   45 Stmt: Exp SEMI
   46     | CompSt
   47     | RETURN Exp SEMI
   48     | IF LP Exp RP Stmt
   49     | IF LP Exp RP Stmt ELSE Stmt
   50     | WHILE LP Exp RP Stmt


Grammar

    0 $accept: Def $end

    1 Specifier: StructSpecifier

    2 StructSpecifier: STRUCT OptTag LC DefList RC
    3                | STRUCT Tag

    4 OptTag: Tag
    5       | %empty

    6 Tag: ID

    7 VarDec: ID
    8       | VarDec LB INT RB

    9 DefList: Def DefList
   10        | %empty

   11 Def: Specifier DecList SEMI

   12 DecList: Dec
   13        | Dec COMMA DecList

   14 Dec: VarDec
   15    | VarDec ASSIGNOP Exp

   16 Exp: Exp ASSIGNOP Exp
   17    | Exp AND Exp
   18    | Exp OR Exp
   19    | Exp RELOP Exp
   20    | Exp PLUS Exp
   21    | Exp MINUS Exp
   22    | Exp STAR Exp
   23    | Exp DIV Exp
   24    | LP Exp RP
   25    | MINUS Exp
   26    | NOT Exp
   27    | ID LP Args RP
   28    | ID LP RP
   29    | Exp LB Exp RB
   30    | Exp DOT ID
   31    | ID
   32    | INT
   33    | FLOAT

   34 Args: Exp COMMA Args
   35     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    STRUCT (258) 2 3
    RETURN (259)
    IF (260)
    ELSE (261)
    WHILE (262)
    SEMI (263) 11
    COMMA (264) 13 34
    TYPE (265)
    LC (266) 2
    RC (267) 2
    ID <string_val> (268) 6 7 27 28 30 31
    INT <int_val> (269) 8 32
    FLOAT <float_val> (270) 33
    ASSIGNOP (271) 15 16
    OR (272) 18
    AND (273) 17
    RELOP (274) 19
    PLUS (275) 20
    MINUS (276) 21 25
    STAR (277) 22
    DIV (278) 23
    NOT (279) 26
    LP (280) 24 27 28
    RP (281) 24 27 28
    LB (282) 8 29
    RB (283) 8 29
    DOT (284) 30
    ERROR (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Specifier <ast_node> (32)
        on left: 1
        on right: 11
    StructSpecifier <ast_node> (33)
        on left: 2 3
        on right: 1
    OptTag <ast_node> (34)
        on left: 4 5
        on right: 2
    Tag <ast_node> (35)
        on left: 6
        on right: 3 4
    VarDec <ast_node> (36)
        on left: 7 8
        on right: 8 14 15
    DefList <ast_node> (37)
        on left: 9 10
        on right: 2 9
    Def <ast_node> (38)
        on left: 11
        on right: 0 9
    DecList <ast_node> (39)
        on left: 12 13
        on right: 11 13
    Dec <ast_node> (40)
        on left: 14 15
        on right: 12 13
    Exp <ast_node> (41)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 15 16 17 18 19 20 21 22 23 24 25 26 29 30 34 35
    Args <ast_node> (42)
        on left: 34 35
        on right: 27 34


State 0

    0 $accept: . Def $end

    STRUCT  shift, and go to state 1

    Specifier        go to state 2
    StructSpecifier  go to state 3
    Def              go to state 4


State 1

    2 StructSpecifier: STRUCT . OptTag LC DefList RC
    3                | STRUCT . Tag

    ID  shift, and go to state 5

    $default  reduce using rule 5 (OptTag)

    OptTag  go to state 6
    Tag     go to state 7


State 2

   11 Def: Specifier . DecList SEMI

    ID  shift, and go to state 8

    VarDec   go to state 9
    DecList  go to state 10
    Dec      go to state 11


State 3

    1 Specifier: StructSpecifier .

    $default  reduce using rule 1 (Specifier)


State 4

    0 $accept: Def . $end

    $end  shift, and go to state 12


State 5

    6 Tag: ID .

    $default  reduce using rule 6 (Tag)


State 6

    2 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 13


State 7

    3 StructSpecifier: STRUCT Tag .
    4 OptTag: Tag .

    LC        reduce using rule 4 (OptTag)
    $default  reduce using rule 3 (StructSpecifier)


State 8

    7 VarDec: ID .

    $default  reduce using rule 7 (VarDec)


State 9

    8 VarDec: VarDec . LB INT RB
   14 Dec: VarDec .
   15    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 14
    LB        shift, and go to state 15

    $default  reduce using rule 14 (Dec)


State 10

   11 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 16


State 11

   12 DecList: Dec .
   13        | Dec . COMMA DecList

    COMMA  shift, and go to state 17

    $default  reduce using rule 12 (DecList)


State 12

    0 $accept: Def $end .

    $default  accept


State 13

    2 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 1

    $default  reduce using rule 10 (DefList)

    Specifier        go to state 2
    StructSpecifier  go to state 3
    DefList          go to state 18
    Def              go to state 19


State 14

   15 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 26


State 15

    8 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 27


State 16

   11 Def: Specifier DecList SEMI .

    $default  reduce using rule 11 (Def)


State 17

   13 DecList: Dec COMMA . DecList

    ID  shift, and go to state 8

    VarDec   go to state 9
    DecList  go to state 28
    Dec      go to state 11


State 18

    2 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 29


State 19

    9 DefList: Def . DefList

    STRUCT  shift, and go to state 1

    $default  reduce using rule 10 (DefList)

    Specifier        go to state 2
    StructSpecifier  go to state 3
    DefList          go to state 30
    Def              go to state 19


State 20

   27 Exp: ID . LP Args RP
   28    | ID . LP RP
   31    | ID .

    LP  shift, and go to state 31

    $default  reduce using rule 31 (Exp)


State 21

   32 Exp: INT .

    $default  reduce using rule 32 (Exp)


State 22

   33 Exp: FLOAT .

    $default  reduce using rule 33 (Exp)


State 23

   25 Exp: MINUS . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 32


State 24

   26 Exp: NOT . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 33


State 25

   24 Exp: LP . Exp RP

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 34


State 26

   15 Dec: VarDec ASSIGNOP Exp .
   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 35
    OR        shift, and go to state 36
    AND       shift, and go to state 37
    RELOP     shift, and go to state 38
    PLUS      shift, and go to state 39
    MINUS     shift, and go to state 40
    STAR      shift, and go to state 41
    DIV       shift, and go to state 42
    LB        shift, and go to state 43
    DOT       shift, and go to state 44

    $default  reduce using rule 15 (Dec)


State 27

    8 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 45


State 28

   13 DecList: Dec COMMA DecList .

    $default  reduce using rule 13 (DecList)


State 29

    2 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 2 (StructSpecifier)


State 30

    9 DefList: Def DefList .

    $default  reduce using rule 9 (DefList)


State 31

   27 Exp: ID LP . Args RP
   28    | ID LP . RP

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25
    RP     shift, and go to state 46

    Exp   go to state 47
    Args  go to state 48


State 32

   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   25    | MINUS Exp .
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    STAR  shift, and go to state 41
    DIV   shift, and go to state 42
    LB    shift, and go to state 43
    DOT   shift, and go to state 44

    $default  reduce using rule 25 (Exp)


State 33

   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   26    | NOT Exp .
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    LB   shift, and go to state 43
    DOT  shift, and go to state 44

    $default  reduce using rule 26 (Exp)


State 34

   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   24    | LP Exp . RP
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 35
    OR        shift, and go to state 36
    AND       shift, and go to state 37
    RELOP     shift, and go to state 38
    PLUS      shift, and go to state 39
    MINUS     shift, and go to state 40
    STAR      shift, and go to state 41
    DIV       shift, and go to state 42
    RP        shift, and go to state 49
    LB        shift, and go to state 43
    DOT       shift, and go to state 44


State 35

   16 Exp: Exp ASSIGNOP . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 50


State 36

   18 Exp: Exp OR . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 51


State 37

   17 Exp: Exp AND . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 52


State 38

   19 Exp: Exp RELOP . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 53


State 39

   20 Exp: Exp PLUS . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 54


State 40

   21 Exp: Exp MINUS . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 55


State 41

   22 Exp: Exp STAR . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 56


State 42

   23 Exp: Exp DIV . Exp

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 57


State 43

   29 Exp: Exp LB . Exp RB

    ID     shift, and go to state 20
    INT    shift, and go to state 21
    FLOAT  shift, and go to state 22
    MINUS  shift, and go to state 23
    NOT    shift, and go to state 24
    LP     shift, and go to state 25

    Exp  go to state 58


State 44

   30 Exp: Exp DOT . ID

    ID  shift, and go to state 59


State 45

    8 VarDec: VarDec LB INT RB .

    $default  reduce using rule 8 (VarDec)


State 46

   28 Exp: ID LP RP .

    $default  reduce using rule 28 (Exp)


State 47

   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID
   34 Args: Exp . COMMA Args
   35     | Exp .

    COMMA     shift, and go to state 60
    ASSIGNOP  shift, and go to state 35
    OR        shift, and go to state 36
    AND       shift, and go to state 37
    RELOP     shift, and go to state 38
    PLUS      shift, and go to state 39
    MINUS     shift, and go to state 40
    STAR      shift, and go to state 41
    DIV       shift, and go to state 42
    LB        shift, and go to state 43
    DOT       shift, and go to state 44

    $default  reduce using rule 35 (Args)


State 48

   27 Exp: ID LP Args . RP

    RP  shift, and go to state 61


State 49

   24 Exp: LP Exp RP .

    $default  reduce using rule 24 (Exp)


State 50

   16 Exp: Exp . ASSIGNOP Exp
   16    | Exp ASSIGNOP Exp .
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 35
    OR        shift, and go to state 36
    AND       shift, and go to state 37
    RELOP     shift, and go to state 38
    PLUS      shift, and go to state 39
    MINUS     shift, and go to state 40
    STAR      shift, and go to state 41
    DIV       shift, and go to state 42
    LB        shift, and go to state 43
    DOT       shift, and go to state 44

    $default  reduce using rule 16 (Exp)


State 51

   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   18    | Exp OR Exp .
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    AND    shift, and go to state 37
    RELOP  shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    STAR   shift, and go to state 41
    DIV    shift, and go to state 42
    LB     shift, and go to state 43
    DOT    shift, and go to state 44

    $default  reduce using rule 18 (Exp)


State 52

   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   17    | Exp AND Exp .
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    RELOP  shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    STAR   shift, and go to state 41
    DIV    shift, and go to state 42
    LB     shift, and go to state 43
    DOT    shift, and go to state 44

    $default  reduce using rule 17 (Exp)


State 53

   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   19    | Exp RELOP Exp .
   20    | Exp . PLUS Exp
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    STAR   shift, and go to state 41
    DIV    shift, and go to state 42
    LB     shift, and go to state 43
    DOT    shift, and go to state 44

    $default  reduce using rule 19 (Exp)


State 54

   16 Exp: Exp . ASSIGNOP Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | Exp . RELOP Exp
   20    | Exp . PLUS Exp
   20    | Exp PLUS Exp .
   21    | Exp . MINUS Exp
   22    | Exp . STAR Exp
   23    | Exp . DIV Exp
   29    | Exp . LB Exp RB
   30    | Exp . DOT ID

    STAR  shift, and go to state 41
    DIV   shift, and go to state 42
    LB    shift, and go to state 43
    DOT   shift, and go to state 44

    $default  reduce using rule 20 (Exp)


State 55
